correct link paths, add header

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
+  <title>pattrn-party</title>
 </head>
 
 <body>
+  <header>
+    <h1>PATTRN
+      <span>PARTY</span>
+    </h1>
+    <h3>Spencer Herms</h3>
+  </header>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="scripts.js"></script>
 </body>
