add title and structure for accordion tabs

--- a/index.html
+++ b/index.html
@@ -15,10 +15,30 @@
 
   <header>
     <h1>PATTRN
-      <span>PARTY</span>
+      <span class="header-span">PARTY</span>
     </h1>
     <h3>Spencer Herms</h3>
   </header>
+
+  <section class="main"> 
+    
+    <section class="accordion">
+      
+      <div class="accordion-tabs-title">
+        <h4>ACCORDION TABS</h4>
+        <hr>
+      </div>
+
+      <div class="accordion-tabs">
+
+      </div>
+
+      <button>VIEW CODE</button>
+
+    </section>
+
+
+  </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="scripts.js"></script>
