--- a/index.html
+++ b/index.html
@@ -51,57 +51,72 @@
 
         <div class="tab-content show" id="one">
           <div class="sqaure-placeholder"></div>
-          <div>
+          <div class="tab-text">
             <h2>Lorem ipsum dolor amet, kombucha</h2>
             <hr>
-            <p>Lorem ipsum dolor amet kombucha knausgaard poke gastropub, flannel af art party scenester. Butcher post-ironic
-              ramps seitan pour-over actually. Cold-pressed pork belly normcore la croix hashtag brooklyn heirloom ethical
-              master cleanse banh mi offal blog salvia. Godard food truck actually man bun leggings truffaut single-origin
-              coffee. Locavore adaptogen polaroid bitters art party flannel skateboard kinfolk gastropub migas. Man braid
-              freegan edison bulb, keytar chartreuse plaid ugh beard trust fund hexagon live-edge blue bottle copper mug.
-              Raw denim knausgaard four loko roof party edison bulb mumblecore lyft air plant.</p>
+            <p>
+              Lorem ipsum dolor amet kombucha knausgaard poke gastropub, flannel af art party scenester. Butcher post-ironic ramps seitan
+              pour-over actually. Cold-pressed pork belly normcore la croix hashtag brooklyn heirloom ethical master cleanse
+              banh mi offal blog salvia. Godard food truck actually man bun leggings truffaut single-origin coffee.
+            </p>
+            <p>
+              Locavore adaptogen polaroid bitters art party flannel skateboard kinfolk gastropub migas. Man braid freegan edison bulb,
+              keytar chartreuse plaid ugh beard trust fund hexagon live-edge blue bottle copper mug.
+            </p>
           </div>
         </div>
 
         <div class="tab-content" id="two">
           <div class="sqaure-placeholder"></div>
-          <div>
+          <div class="tab-text">
             <h2>Pok pok sustainable tbh, godard</h2>
             <hr>
-            <p>Pok pok sustainable tbh godard live-edge venmo PBR&B. Photo booth man bun glossier meh pug marfa. Sriracha polaroid
-              sartorial lyft glossier bitters live-edge kogi fashion axe. Church-key mlkshk meggings lyft master cleanse
-              normcore crucifix pour-over deep v try-hard single-origin coffee fixie. Live-edge fam taxidermy direct trade
-              irony banh mi chillwave fashion axe mumblecore ennui bespoke kinfolk edison bulb la croix raw denim. Humblebrag
-              viral swag, keffiyeh cray enamel pin lomo migas twee XOXO kitsch literally pabst echo park. Cred pinterest
-              shoreditch, pitchfork shaman hoodie mlkshk tattooed normcore man bun blog 8-bit keffiyeh chartreuse.</p>
+            <p>
+              Pok pok sustainable tbh godard live-edge venmo PBR&B. Photo booth man bun glossier meh pug marfa. Sriracha polaroid sartorial
+              lyft glossier bitters live-edge kogi fashion axe. Church-key mlkshk meggings lyft master cleanse normcore crucifix
+              pour-over deep v try-hard single-origin coffee fixie. Live-edge fam taxidermy direct trade irony banh mi chillwave
+              fashion axe mumblecore ennui bespoke kinfolk edison bulb la croix raw denim.
+            </p>
+            <p>
+              Humblebrag viral swag, keffiyeh cray enamel pin lomo migas twee XOXO kitsch literally pabst echo park. Cred pinterest shoreditch,
+              pitchfork shaman hoodie mlkshk tattooed normcore man bun blog 8-bit keffiyeh chartreuse.
+            </p>
           </div>
         </div>
 
         <div class="tab-content" id="three">
           <div class="sqaure-placeholder"></div>
-          <div>
+          <div class="tab-text">
             <h2>Butcher coloring book migas</h2>
             <hr>
-            <p>Butcher coloring book migas cronut freegan typewriter photo booth YOLO activated charcoal asymmetrical plaid
-              meh pickled waistcoat whatever. Poutine hella migas, austin brooklyn single-origin coffee twee tacos lumbersexual
-              wayfarers fanny pack wolf put a bird on it brunch paleo. Food truck roof party poke microdosing drinking vinegar.
-              Chartreuse typewriter iPhone, selvage keffiyeh try-hard kale chips whatever vinyl sartorial activated charcoal
-              +1. Street art authentic gentrify yr poutine, cray live-edge affogato la croix succulents. Tumeric raclette
-              humblebrag waistcoat, taxidermy you probably haven't heard of them tbh hella letterpress asymmetrical leggings
-              ramps messenger bag vice vaporware.</p>
+            <p>
+              Butcher coloring book migas cronut freegan typewriter photo booth YOLO activated charcoal asymmetrical plaid meh pickled
+              waistcoat whatever. Poutine hella migas, austin brooklyn single-origin coffee twee tacos lumbersexual wayfarers
+              fanny pack wolf put a bird on it brunch paleo. Food truck roof party poke microdosing drinking vinegar. Chartreuse
+              typewriter iPhone, selvage keffiyeh try-hard kale chips whatever vinyl sartorial activated charcoal +1. Street
+              art authentic gentrify yr poutine, cray live-edge affogato la croix succulents. 
+            </p>
+            <p>
+              Tumeric raclette humblebrag
+              waistcoat, taxidermy you probably haven't heard of them tbh hella letterpress asymmetrical leggings ramps messenger
+              bag vice vaporware.
+            </p>
           </div>
         </div>
 
         <div class="tab-content" id="four">
           <div class="sqaure-placeholder"></div>
-          <div>
+          <div class="tab-text">
             <h2>Wayfarers enamel pin thundercats</h2>
             <hr>
             <p>Wayfarers enamel pin thundercats tote bag neutra. Tilde man bun green juice poutine, freegan small batch organic
               VHS iceland YOLO. Drinking vinegar tousled narwhal locavore palo santo ennui knausgaard readymade everyday
               carry cray microdosing. Humblebrag vaporware pug woke kombucha echo park DIY irony pour-over YOLO flannel.
+            </p>
+            <p>
               Vinyl deep v shabby chic kinfolk, swag schlitz mustache vexillologist copper mug. Kitsch venmo lyft fanny pack
-              microdosing.</p>
+              microdosing.
+            </p>
           </div>
         </div>
 
