--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./styles/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/accordion.css">
+  <link rel="stylesheet" href="./styles/flex-cards.css">
   <title>pattrn-party</title>
 </head>
 
@@ -24,7 +26,7 @@
 
     <section class="accordion">
 
-      <div class="accordion-tabs-title">
+      <div class="tabs-title">
         <h4>ACCORDION TABS</h4>
         <hr>
       </div>
@@ -50,7 +52,7 @@
         </nav>
 
         <div class="tab-content show" id="one">
-          <div class="sqaure-placeholder"></div>
+          <div class="square-placeholder"></div>
           <div class="tab-text">
             <h2>Lorem ipsum dolor amet, kombucha</h2>
             <hr>
@@ -67,7 +69,7 @@
         </div>
 
         <div class="tab-content" id="two">
-          <div class="sqaure-placeholder"></div>
+          <div class="square-placeholder"></div>
           <div class="tab-text">
             <h2>Pok pok sustainable tbh, godard</h2>
             <hr>
@@ -85,7 +87,7 @@
         </div>
 
         <div class="tab-content" id="three">
-          <div class="sqaure-placeholder"></div>
+          <div class="square-placeholder"></div>
           <div class="tab-text">
             <h2>Butcher coloring book migas</h2>
             <hr>
@@ -105,7 +107,7 @@
         </div>
 
         <div class="tab-content" id="four">
-          <div class="sqaure-placeholder"></div>
+          <div class="square-placeholder"></div>
           <div class="tab-text">
             <h2>Wayfarers enamel pin thundercats</h2>
             <hr>
@@ -123,7 +125,44 @@
       </div>
 
       <button>VIEW CODE</button>
+      <!-- https://codepen.io/PreciseSlice/pen/oqENWV -->
 
+    </section>
+
+    <div class="tabs-title">
+        <h4>FLEXIBLE CARDS</h4>
+        <hr>
+    </div>
+
+    <section class="flex-cards">
+      <div class="long-card">
+        <h2>Lorem ipsum dolor sit</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
+      <div class="short-card">
+        <h2>Lorem ipsum</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
+      <div class="short-card">
+        <h2>Lorem ipsum dolor sit</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
+      <div class="short-card">
+        <h2>Lorem ipsum dolor sit am...</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
+      <div class="short-card">
+        <h2>Lorem ipsum</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
+      <div class="short-card">
+        <h2>Lorem ipsum</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
+      <div class="long-card">
+        <h2>Lorem ipsum dolor sit</h2>
+        <img src="./img.png" alt="placeholder image">
+      </div>
     </section>
 
 
