change placeholders to <div>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+  
   <header>
     <h1>PATTRN
       <span class="header-span">PARTY</span>
@@ -135,37 +135,43 @@
     </div>
 
     <section class="flex-cards">
+
       <div class="long-card">
         <h2>Lorem ipsum dolor sit</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
       <div class="short-card">
         <h2>Lorem ipsum</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
       <div class="short-card">
         <h2>Lorem ipsum dolor sit</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
       <div class="short-card">
         <h2>Lorem ipsum dolor sit am...</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
       <div class="short-card">
         <h2>Lorem ipsum</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
       <div class="short-card">
         <h2>Lorem ipsum</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
       <div class="long-card">
         <h2>Lorem ipsum dolor sit</h2>
-        <img src="./img.png" alt="placeholder image">
+        <div class="card-image"></div>
       </div>
+
     </section>
-
-
   </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
