start header bar section

--- a/index.html
+++ b/index.html
@@ -171,7 +171,19 @@
         <div class="card-image"></div>
       </div>
 
+      <button>VIEW CODE</button>
+      
     </section>
+
+    <section class="header-bar">
+
+      <div class="tabs-title">
+        <h4>HEADER BAR</h4>
+        <hr>
+      </div>
+
+    </section>
+
   </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
