--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/accordion.css">
   <link rel="stylesheet" href="./styles/flex-cards.css">
+  <link rel="stylesheet" href="./styles/header.css">
   <title>pattrn-party</title>
 </head>
 
@@ -180,6 +181,20 @@
       <div class="tabs-title">
         <h4>HEADER BAR</h4>
         <hr>
+      </div>
+
+      <div class="nav-bar">
+
+        <div class="round-img"></div>
+        
+        <a href="#">Navigation Link 1</a>
+        <a href="#">Navigation Link 2</a>
+        <a href="#">Navigation Link 3</a>
+        
+        <div class="input-box">
+          <img src="./search.svg"/>
+          <input placeholder="Search"/>
+        </div>
       </div>
 
     </section>
