add class for codepen links

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
       </div>
 
-      <button>VIEW CODE</button>
+      <button class="accordion-code">VIEW CODE</button>
       <!-- https://codepen.io/PreciseSlice/pen/oqENWV -->
 
     </section>
@@ -170,7 +170,7 @@
         <div class="card-image"></div>
       </div>
 
-      <button>VIEW CODE</button>
+      <button class="card-code">VIEW CODE</button>
 
     </section>
 
@@ -183,7 +183,7 @@
 
       <div class="nav-bar">
 
-        <div class="round-img"></div>
+        <div class="round-img mobile-top"></div>
 
         <nav class="nav-a">
 
@@ -201,7 +201,7 @@
         <a href="#" class="menu-btn">Menu</a>
       </div>
 
-      <button>VIEW CODE</button>
+      <button class="mobile-top nav-code">VIEW CODE</button>
 
     </section>
 
