add span classes to toggle for plus and minus.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
         <nav class="tab-list">
           <div class="a-wrapper selected-div" id="first-tab">
-            <a class="tab active" href="#one">Tab 1</a>
+            <a class="tab active" href="#one">Tab 1<span class="plus">+</span> <span class="minus">-</span> </a>
+            
           </div>
 
           <div class="a-wrapper">
